# RetrievalTools

./: .gitignore  CITATION.cff  README.md  arguments.py  data.py  encoder.py  generate_passage_embeddings.py  index.py  passage_retrieval.py  pixi.toml  pyproject.toml  retriever.py  serve_retriever.py  setup.py  text_annotation.py  utils.py
configs/corpus/: dclm_baseline_dedup_256.yaml  fineweb_edu_256.yaml  wikipedia_dpr.yaml  wikipedia_kilt.yaml
configs/data/: retrieval.yaml
configs/index/: flat_index.yaml
configs/retriever/: serper.yaml  wikipedia_dpr.yaml
retrievaltools/: __init__.py  arguments.py  corpus.py  data.py  download_data.py  encoder.py  generate_passage_embeddings.py  index.py  monitor_server.py  passage_retrieval.py  requirements.txt  retriever.py  serve_retriever.py  text_annotation.py  utils.py
retrievaltools/configs/corpus/: dclm_baseline_dedup_256.yaml  fineweb_edu_256.yaml  wikipedia_dolma.yaml  wikipedia_dpr.yaml  wikipedia_kilt.yaml
retrievaltools/configs/models/: Qwen3-0.6B.yaml  gte-Qwen2-1.5B-instruct.yaml
retrievaltools/configs/retriever/: serper.yaml  wikipedia_dolma.yaml  wikipedia_dpr.yaml  wikipedia_kilt.yaml
retrievaltools/scripts/: annotate.sh  gen_emb.sh  preprocess_queries.py
scripts/: annotate.sh  annotate_shard.sh  gen_emb.sh  preprocess_queries.py  retrieve.sh
